# 3070-final-project

./: .gitignore  README.md  pyproject.toml
docs/preliminary-report/: 1-introduction.md  2-literature-review.md  3-design.md  4-prototype.md  5-references.md  report.md
src/: cli.py  web.py
src/answer_processing/: README.md  __init__.py  asr.py  ocr.py  pyproject.toml
src/assessment/: __init__.py  analysis.py  analysis_local.py  analysis_perplexity.py  conversion.py
src/content_generation/: edu_content.py  edu_content_local.py  edu_content_perplexity.py  generated_sentences.txt  generated_sentences_unique.txt  missing_words.py  prompt_utilities.py  sentences.py  vocabulary.py
src/data_generation/: __init__.py  edu_content.py  edu_content_perplexity.py  generated_sentences_unique.txt  missing_words.py  prompt_utilities.py  sentences.py  vocabulary.py
src/retrieval/: __init__.py  embedding.py
src/scripts/: README.md  embed_vocabulary.py  timed_analysis_local.py  timed_analysis_perplexity.py  timed_questions_generation_local.py  timed_questions_generation_perplexity.py  timed_text_generation_local.py  timed_text_generation_perplexity.py  utils.py
