[project]
name = "3070-fp"
version = "0.1.0"
description = "CS BSc at UoL - Final Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.0.0",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "perplexityai>=0.20.1",
    "python-dotenv>=1.2.1",
]
