# All packages except PyTorch-related ones 
# are installed from the main index, pypi.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "cuda130"
url = "https://download.pytorch.org/whl/cu130"

# For CUDA 13.0 (supports the Blackwell architecture),
# a custom index is used -- cuda130
[tool.uv.sources]
torch = { index = "cuda130" }
torchaudio = { index = "cuda130" }
torchvision = { index = "cuda130" }
# Explicitly provide the source for markupsafe to prevent
# installation of the legacy version from the cuda130 index.
markupsafe = { index = "pypi" }


[project]
name = "3070-fp"
version = "0.1.0"
description = "CS BSc at UoL - Final Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fugashi>=1.5.2",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "markupsafe>=3.0.3",
    "perplexityai>=0.26.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
]

# Configure the project as a package so that scripts
# can find dependencies in the source directory.
[tool.uv]
package = true

# The source directory for dependencies.
[tool.setuptools.packages.find]
where = ["src"]
